# inqbridge

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  WORKSTATE.md  local.json.example  notes about running the InqBridge.txt  pyproject.toml  setup.bat
dev/: README.md
docs/: inquisit_cheat_sheet.txt  inquisit_programmers_manual.txt  script_notes_examples.txt
experiments/flower_prediction/: EXPERIMENT.md  comprehension_inc.iqx  config_inc.iqx  debrief_inc.iqx  demographics_inc.iqx  instructions_inc.iqx  main.iqx  prediction_task_inc.iqx
experiments/typing_rt/: EXPERIMENT.md  typing_rt.iqx
experiments/undo_threshold/: DIFFICULTIES.md  EXPERIMENT.md  config_inc.iqx  debrief_inc.iqx  feedback_inc.iqx  (+6 more)
includes/: defaults_layout.iqx
mcp_server/: __init__.py  main.py
runner/: __init__.py  artifacts.py  auto_fix.py  capture_manager.py  cli.py  config.py  data_qa.py  decomposer.py  delivery.py  executor.py  fast_mode.py  includes.py  manifest.py  merge_validator.py  patcher.py  preflight.py  run.py  scaffold.py  snapshot.py  spec_generator.py  visual_qa.py  visual_qa_deep.py
scripts/: download_library.py  download_library_v6.py  hello_world.iqx  library_index.md  micpred_keys_valenceintrandist3.iqx  test_histog19_ChatGPT.iqx  test_histog20_ChatGPT.iqx
tests/: test_auto_fix.py  test_capture_manager.py  test_data_qa.py  test_decomposer.py  test_fast_mode.py  test_includes.py  test_manifest.py  test_merge_validator.py  test_patcher.py  test_preflight.py  test_scaffold.py  test_snapshot.py  test_spec_generator.py  test_visual_qa.py  test_visual_qa_deep.py
(+211 files in other folders)
