[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inq-bridge"
version = "0.1.0"
description = "Bridge program allowing LLMs to run Inquisit Scripts"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0",
    "imagehash>=4.3",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
inquisit-runner = "runner.cli:main"

[tool.setuptools.packages.find]
include = ["runner*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
